[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/SplashScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/transition.tscn" type="PackedScene" id=2]

[node name="SplashScreen" type="Control"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Transition" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="transitioned" from="Transition" to="." method="_on_Transition_transitioned"]
